# Pipeline.py

./: .gitignore  .gitlab-ci.yml  .travis.yml  Pipeline.py  README.md  ReadMe.md  pyproject.toml  setup.cfg  setup.py
examples/: example1.ipynb
tests/: tests.py
