[metadata]
name = Pipeline.py
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/Pipeline.py
description = A framework to build pipelines
long_description = file: README.md
keywords = pipeline, processing
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
py_modules = Pipeline
setup_requires = setuptools_scm;
test_suite = tests.tests.Tests
